<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!-- Budget details -->
    <LinearLayout
        android:id="@+id/budget_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/budget_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_amount" />

        <EditText
            android:id="@+id/budget_amount_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/_0_00" />

        <TextView
            android:id="@+id/budget_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_category" />

        <Spinner
            android:id="@+id/budget_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/budget_categories"
            android:prompt="@string/budget_category_prompt" />

        <TextView
            android:id="@+id/budget_progress_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_progress" />

        <ProgressBar
            android:id="@+id/budget_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/budget_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_status" />

        <TextView
            android:id="@+id/budget_status_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_started" />

        <Button
            android:id="@+id/start_budget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_budget" />

    </LinearLayout>

    <!-- Expense list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expense_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/budget_details_container"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

    <!-- Add expense button -->
    <Button
        android:id="@+id/add_expense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_expense1" />

</RelativeLayout>
