<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Date range filter section -->

    <Button
        android:id="@+id/add_expense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        app:layout_constraintBottom_toTopOf="@+id/date_range_filter_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <!-- Expense list section -->

    <TextView
        android:id="@+id/start_date_label"
        android:layout_width="69dp"
        android:layout_height="14dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="284dp"
        android:text="@string/start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/start_date_input"
        android:layout_width="141dp"
        android:layout_height="57dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/start_date_input"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/end_date_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/start_date_label" />

    <TextView
        android:id="@+id/end_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:text="@string/end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_date_label" />

    <EditText
        android:id="@+id/end_date_input"
        android:layout_width="143dp"
        android:layout_height="52dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/end_date_input"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/date_range_filter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/end_date_label" />

    <Button
        android:id="@+id/date_range_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/date_range"
        app:layout_constraintBottom_toTopOf="@+id/expenses_list_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date_range_filter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/filter_by_date_range"
        app:layout_constraintBottom_toTopOf="@+id/start_date_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/expenses_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/expenses_list"
        app:layout_constraintBottom_toTopOf="@+id/expenses_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/expenses_list"
        android:layout_width="228dp"
        android:layout_height="267dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


